--- a/iam/src/main/resources/META-INF/microprofile-config.properties
+++ b/iam/src/main/resources/META-INF/microprofile-config.properties
@@ -22,3 +22,6 @@ argon2.threads=1
 
 # CORS Configuration
 cors.allowed.origins=http://127.0.0.1:5500,http://localhost:5500
+
+# Roles Configuration
+roles=user,admin,doctor,patient
