--- a/iam/src/main/resources/META-INF/microprofile-config.properties
+++ b/iam/src/main/resources/META-INF/microprofile-config.properties
@@ -1,19 +1,26 @@
 # Health Monitoring IAM - MicroProfile Configuration
 
-# JWT Configuration
-jwt.realm=health-monitoring-realm
-jwt.lifetime.duration=3600
+# Application Name
+jakarta.application.name=cot-iam
 
-# MongoDB Configuration (default values, can be overridden by environment variables)
+# JWT Configuration
+jwt.realm=cot-app-sec:iam
+jwt.lifetime.duration=1020
+jwt.claim.roles=groups
+mp.jwt.realm=cot-app-sec:iam
+mp.jwt.verify.issuer=urn:cot-app-sec:iam
+
+# MongoDB Configuration
 mongodb.host=localhost
 mongodb.port=27017
 mongodb.database=healthmonitoring
 
 # Jakarta NoSQL Configuration
+jnosql.provider=org.eclipse.jnosql.databases.mongodb.communication.MongoDBDocumentConfiguration
 jnosql.document.database=healthmonitoring
 jnosql.mongodb.host=localhost:27017
 
-# Argon2 Configuration
+# Argon2 Password Hashing Configuration
 argon2.saltLength=16
 argon2.hashLength=32
 argon2.iterations=3
@@ -21,7 +28,7 @@ argon2.memory=65536
 argon2.threads=1
 
 # CORS Configuration
-cors.allowed.origins=http://127.0.0.1:5500,http://localhost:5500
+cors.allowed.origins=http://127.0.0.1:5500,http://localhost:5500,http://localhost:8080
 
 # Roles Configuration
-roles=user,admin,doctor,patient
+roles=DOCTOR,FAMILY,PATIENT,SENSOR,ADMIN
