--- a/api/src/main/resources/META-INF/microprofile-config.properties
+++ b/api/src/main/resources/META-INF/microprofile-config.properties
@@ -1,14 +1,50 @@
-# Application Name
-jakarta.application.name=cot-api
+# ============================================================
+# MicroProfile JWT Configuration for API Module
+# ============================================================
 
-# MongoDB Configuration
-jnosql.mongodb.host=localhost:27017
-jnosql.mongodb.database=smart_health_db
+# JWT Public Key Location (JWK endpoint from IAM)
+# Points to iam-1.0 deployment
+mp.jwt.verify.publickey.location=http://localhost:8080/iam-1.0/rest-iam/jwk?kid=default
 
-# Security: Connects to IAM JWK Endpoint
-# Update the URL if your IAM is on a different port/host
-mp.jwt.verify.publickey.location=http://localhost:8080/iam/resources/jwk?kid=default
+# JWT Issuer - MUST match IAM configuration exactly
 mp.jwt.verify.issuer=urn:cot-app-sec:iam
 
-# Map Roles (Must match your IAM)
-roles=DOCTOR,FAMILY,PATIENT,SENSOR,ADMIN
+# JWT Audience (optional - validates 'aud' claim)
+# mp.jwt.verify.audiences=health-monitoring-api
+
+# ============================================================
+# MongoDB Configuration (Jakarta NoSQL)
+# ============================================================
+jnosql.mongodb.host=localhost:27017
+jnosql.document.database=smart_health_db
+
+# MongoDB connection pool settings (optional)
+# jnosql.mongodb.maxpoolsize=100
+# jnosql.mongodb.minpoolsize=10
+# jnosql.mongodb.maxidletime=60000
+# jnosql.mongodb.maxlifetime=1800000
+
+# ============================================================
+# Application Roles - MUST match IAM roles exactly
+# ============================================================
+application.roles=DOCTOR,FAMILY,PATIENT,SENSOR,ADMIN
+
+# ============================================================
+# CORS Configuration
+# ============================================================
+# Frontend origins (comma-separated)
+# In production, specify exact origins instead of "*"
+cors.allowed.origins=http://127.0.0.1:5500,http://localhost:5500,http://localhost:8080
+
+# ============================================================
+# Application Settings
+# ============================================================
+application.name=Health Monitoring API
+application.version=1.0
+application.environment=development
+
+# ============================================================
+# Logging Configuration (optional)
+# ============================================================
+# logging.level=INFO
+# logging.file=/var/log/health-monitoring-api.log
