refactor(security): enable dynamic JWK lookup to support IAM key rotation

--- a/api/src/main/resources/META-INF/microprofile-config.properties
+++ b/api/src/main/resources/META-INF/microprofile-config.properties
@@ -4,8 +4,7 @@
 
 # JWT Public Key Location (JWK endpoint from IAM)
 # Points to iam-1.0 deployment
-mp.jwt.verify.publickey.location=http://localhost:8080/iam-1.0/rest-iam/jwk?kid=default
-
+mp.jwt.verify.publickey.location=http://localhost:8080/iam-1.0/rest-iam/jwk
 # JWT Issuer - MUST match IAM configuration exactly
 mp.jwt.verify.issuer=urn:cot-app-sec:iam
 
