--- a/api/pom.xml
+++ b/api/pom.xml
@@ -41,8 +41,8 @@
         <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
         <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
+        <hivemq.version>1.3.3</hivemq.version>
     </properties>
-
     <dependencies>
         <!-- Jakarta EE Platform -->
         <dependency>
@@ -111,6 +111,11 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.hivemq</groupId>
+            <artifactId>hivemq-mqtt-client</artifactId>
+            <version>${hivemq.version}</version>
         </dependency>
     </dependencies>
 
