--- a/iam/src/main/resources/META-INF/microprofile-config.properties
+++ b/iam/src/main/resources/META-INF/microprofile-config.properties
@@ -32,3 +32,12 @@ cors.allowed.origins=http://127.0.0.1:5500,http://localhost:5500,http://localhos
 
 # Roles Configuration
 roles=DOCTOR,FAMILY,PATIENT,SENSOR,ADMIN
+
+
+
+smtp.host=smtp.gmail.com
+smtp.port=587
+smtp.username=zouarimoezzz@gmail.com
+smtp.password=rlae ycow earv eyae
+smtp.starttls.enable=true
+smtp.sender=Health Monitoring <no-reply@healthmonitor.com>
