Clear SMTP username and password in config( if someone wants to use it he has to use his credentials or ask me)
Removed sensitive SMTP credentials from configuration.

--- a/iam/src/main/resources/META-INF/microprofile-config.properties
+++ b/iam/src/main/resources/META-INF/microprofile-config.properties
@@ -37,7 +37,7 @@ roles=DOCTOR,FAMILY,PATIENT,SENSOR,ADMIN
 
 smtp.host=smtp.gmail.com
 smtp.port=587
-smtp.username=zouarimoezzz@gmail.com
-smtp.password=rlae ycow earv eyae
+smtp.username=
+smtp.password=
 smtp.starttls.enable=true
 smtp.sender=Health Monitoring <no-reply@healthmonitor.com>
